# Machine-Learning-in-Production---Vehicle-Claims

./: .gitignore  Makefile  README.md  original.R  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml
src/: eda.py  freMTPL2freq.csv  funcs.py  runner_inference.py
src/config/: .env  db.py  test.py
src/db/: db.sqlite  db_model.py  db_small.sqlite
src/model/: model_inference.py
src/model/models/: rf_db_v3
src/model/pipeline/: collection.py  model.py  preparation.py
